--- a/frontend/src/estilos/estiloPagina.css
+++ b/frontend/src/estilos/estiloPagina.css
@@ -101,7 +101,7 @@ h2 {
     background-color: #7AF329;
     position: absolute;
     left: 640px;
-    top: 850px;
+    top: 950px;
     width: 200px;
     text-align: center;
     margin: auto;
@@ -212,6 +212,19 @@ h2 {
 #btnConfirmar {
     position: sticky;
     left: 650px;
+}
+
+#botonConvalidar {
+    cursor: pointer;
+    border: #000 solid 1.5px;
+    background-color: #7AF329;
+    position: absolute;
+    left: 640px;
+    top: 850px;
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 
